Fri Nov  1 18:12:21 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* rpc.c (conduct_rpc): Unlock OUTSTANDING_LOCK if write fails.

Wed Oct 30 18:25:18 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* ops.c (netfs_attempt_statfs): Convert incoming numbers from
	network to host byte order.
	Don't convert sizes from IOSIZE to BSIZE units.
	Return BSIZE in f_bsize field, not IOSIZE.
	Fill in f_fsid field.

Thu Oct 24 23:01:35 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (runtime_argp_children): New variable.
	(runtime_argp_parents): Variable removed.
	(runtime_argp): Use RUNTIME_ARGP_CHILDREN, not RUNTIME_ARGP_PARENTS.
	(main): Rename ARGP_PARENTS to ARGP_CHILDREN, and change the
 	element type to `struct argp_child'; change the reference in ARGP
 	accordingly.
	
Fri Oct  4 00:00:12 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* mount.c: Add hacks to avoid idiotic sun definitions of TRUE,
	FALSE, and malloc in <rpc/types.h>.
	* nfs.h (bool_t, enum_t): Typedefs removed.

Thu Oct  3 12:04:36 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ops.c (netfs_attempt_write): If we get EINTR after having
	already written something, return a short count.
	
	* ops.c (netfs_attempt_create_file): If verify_nonexistent returns
	an error, bother to properly unlock NP before returning.

Mon Sep 30 15:45:31 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (OPT_RSIZE): Changed to 'R'.
	(OPT_WSIZE): Changed to 'W'.
	(doc): Add general description.

Thu Sep 26 14:03:07 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* nfs.h (enum_t): New decl.

Wed Sep 18 13:03:22 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (netfs_append_args): Renamed from netfs_get_options.
	Don't initialize ARGZ & ARGZ_LEN anymore.
	Add remote filesystem spec to output.
	(hold): Variable removed.
	(main): Don't use HOLD anymore.
	
Thu Sep 12 16:46:47 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(nfs): Omit special dependency.
